# lsum

./: .gitignore  LICENSE  README.md  pyproject.toml
src/lsum/: main.py
src/lsum/lib/: constants.py  ls.py  mime.py  utils.py
website/: .gitignore  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
website/src/components/: CopyButton.astro  Launchpad.astro  TerminalMockup.astro
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
