[project]
name = "lsum"
version = "0.1.3"
description = "Directory summary tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.2",
    "flit-core>=3.12.0",
    "pathspec>=0.12.1",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "rich>=15.0.0",
]

[project.scripts]
lsum = "lsum.main:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

